[tool.poetry]
name = "ppo-sandbox"
version = "0.3.0"
description = "PPO RL Sandbox"
authors = ["Rohan Mitchell <rohan@rohanmitchell.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
gym = {extras = ["box2d"], version = "^0.26.0"}
torch = "^1.12.1"
pytest-watch = "^4.2.0"
wandb = "^0.13.2"
argparse = "^1.4.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

strict_equality = true
strict_concatenate = true

check_untyped_defs = true
